--- a/Pages/NewProject.razor
+++ b/Pages/NewProject.razor
@@ -54,7 +54,7 @@
         }
     }
 
-    private async void Submit()
+    private void Submit()
     {
         if (currentUser == null)
         {
